deploy/kustomize/traefik-tcp/ingressroutes.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: imap
  labels:
    app.kubernetes.io/part-of: docker-mailserver
spec:
  entryPoints:
    - imap
  routes:
    - match: HostSNI(`*`)
      services:
        - name: mda
          port: imap
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: imaps
  labels:
    app.kubernetes.io/part-of: docker-mailserver
spec:
  entryPoints:
    - imaps
  routes:
    - match: HostSNI(`*`)
      services:
        - name: mda
          port: imaps
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: smtp
  labels:
    app.kubernetes.io/part-of: docker-mailserver
spec:
  entryPoints:
    - smtp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: mta
          port: smtp
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: submission
  labels:
    app.kubernetes.io/part-of: docker-mailserver
spec:
  entryPoints:
    - submission
  routes:
    - match: HostSNI(`*`)
      services:
        - name: mta
          port: submission
